@@ -1,6 +1,6 @@
 Package: xcms
-Version: 1.21.10
-Date: 2010-01-06
+Version: 1.21.11
+Date: 2010-01-30
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
