@@ -1,3 +1,6 @@
+2010-01-30: 1.21.11:
+Allow an explicit center argument in retcor(method="obiwarp").
+
 2010-01-06: 1.21.10:
 Preparing for mzML support
 
